Update and rename main.yml to package-exe.yml

--- a/.github/workflows/package-exe.yml
+++ b/.github/workflows/package-exe.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: CxKitty For Windows x64
+          name: DGLabMouseListener For Windows x64
           path: |
             out
